04-gitops-apps/manifests/storefront-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront-web
  template:
    metadata:
      labels:
        app: storefront-web
    spec:
      containers:
        - name: storefront-web
          image: storefront-web
