04-gitops-apps/manifests/storefront-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-web
  labels:
    app: storefront-web
spec:
  selector:
    app: storefront-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
