04-gitops-apps/manifests/storefront-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront-web
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/group.name: "dev-storefront"
    external-dns.alpha.kubernetes.io/hostname: dev.bzyk0945.site
spec:
  ingressClassName: alb
  rules:
    - host: dev.bzyk0945.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront-web
                port:
                  number: 80
